# insight

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  GOAL_STATE.md  LICENSE  PLAN.md  PROMPTS.md  README.md  design.md  jest.config.js  package-lock.json  package.json  product_brief.md  pyproject.toml  setup.cfg  tsconfig.json
.cursor/rules/: insight-rules.mdc
.github/: dependabot.yml
.github/workflows/: quality.yml  security.yml
__tests__/: index.test.ts
__tests__/lib/: phase-manager.test.ts
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: index.html
coverage/lcov-report/src/: index.html  index.ts.html
coverage/lcov-report/src/lib/: index.html  phase-manager.ts.html  types.ts.html
old_poc/: jest.config.js
old_poc/__tests__/: index.test.ts.txt  setup.ts
old_poc/server/: auth.ts  config.ts  github.ts  index.ts  llm.ts  routes.ts  utils.ts  workflows.ts
old_poc/server/__tests__/: auth.test.ts  github.test.ts  llm.test.ts
old_poc/src/: index.ts.txt
old_poc/src/lib/: phase-manager.ts.txt  types.ts
src/: index.ts  types.ts
src/insight/: __init__.py  __main__.py  prompts.py  requirements_prompts.py  server.py  test prompts.txt
src/insight/handlers/: __init__.py  architecture_handlers.py  concept_handlers.py  design_handlers.py  implementation_handlers.py  integration_test_handlers.py  requirements_handlers.py
src/insight/prompts/: __init__.py  architecture_prompts.py  concept_prompts.py  design_prompts.py  implementation_prompts.py  integration_test_prompts.py  requirements_prompts.py
src/lib/: phase-manager.ts  types.ts
src/ts/: index.ts  types.ts
