[tool.poetry]
name = "insight-py"
version = "0.1.0"
description = "Python port of the Insight MCP server"
authors = ["Atomik"]
license = "MIT"
packages = [{include = "insight", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
mcp = {extras = ["cli"], version = "^1.2.0"}
langchain-core = "^0.3.31"
langchain-community = "^0.3.15"
langchain-openai = "^0.3.2"
langchain-anthropic = "^0.3.4"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
bandit = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
insight-py = "insight_py.__main__:main"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert warnings in tests

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:D100,D101,D102,D103",
]
docstring-convention = "google"
